--- a/CSS/style.css
+++ b/CSS/style.css
@@ -53,7 +53,7 @@
 .hero {
     position: relative;
     height: 100vh;
-    background: url('D:\web-dev-journey\project3\Restaurant_UI\images\hero_1.jpg') center/cover no-repeat;
+    background: url('./images/hero_1.jpg') center/cover no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
